--- a/app/src/main/res/layout/dialog_alter_alert.xml
+++ b/app/src/main/res/layout/dialog_alter_alert.xml
@@ -67,21 +67,26 @@
             android:text="@string/volume"
             android:textColor="@color/black"
             android:textSize="22sp"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <SeekBar
             android:id="@+id/volume_slider"
             android:layout_gravity="center"
-            android:layout_weight="6"
+            android:layout_weight="4"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
-        <ImageButton
-            android:id="@+id/vibrate_button"
+        <ImageView
+            android:id="@+id/vibrate_icon"
             android:background="#00000000"
             android:src="@drawable/ic_vibrate"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
+        <Switch
+            android:id="@+id/vibrate_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
 </LinearLayout>
