--- a/app/src/main/res/layout/dialog_reminder.xml
+++ b/app/src/main/res/layout/dialog_reminder.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content">
     <Button
         android:id="@+id/customize_alert_button"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:gravity="start"
         android:text="@string/customize_alert"
         style="@style/Base.Widget.AppCompat.ButtonBar"
@@ -61,7 +61,7 @@
             <TextView
                 android:text="@string/alert_type"
                 android:textColor="@color/black"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -87,7 +87,7 @@
             <TextView
                 android:text="@string/sound"
                 android:textColor="@color/black"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -99,7 +99,7 @@
                 android:layout_weight="6">
             </Spinner>
             <ImageButton
-                android:src="@drawable/ic_sound"
+                android:src="@drawable/ic_play_sound"
                 android:background="#00000000"
                 android:id="@+id/sound_test_button"
                 android:layout_weight="1"
@@ -114,23 +114,28 @@
             <TextView
                 android:text="@string/volume"
                 android:textColor="@color/black"
-                android:textSize="22sp"
-                android:layout_weight="3"
+                android:textSize="20sp"
+                android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
             <SeekBar
                 android:id="@+id/volume_slider"
                 android:layout_gravity="center"
-                android:layout_weight="6"
+                android:layout_weight="4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
-            <ImageButton
-                android:id="@+id/vibrate_button"
+            <ImageView
+                android:id="@+id/vibrate_icon"
                 android:background="#00000000"
                 android:src="@drawable/ic_vibrate"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
+            <Switch
+                android:id="@+id/vibrate_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
